tests/NormalTests/paczka1/fuzzy1/76485323.err
Error in line 1: XRfdymFX S784 60,19
Error in line 20: 26ToVSUs S784 43,6
